tests/errors/unresolved-label.spcasmtest
org 0
mov a,no_exist
